Add Publisher's Statement (#1020)
Adds a publishers_statement field to the work version, and moves the
keyword field down to "Optional Metadata" because it was never required
before.

For display, the statement is added to the description and converted to
html and plain text as needed.
